; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_acad.c_acpi_acad_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_acad.c_acpi_acad_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_acad_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i8*)* @acpi_acad_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_acad_ioctl(i32 %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.acpi_acad_softc*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = ptrtoint i8* %9 to i64
  store i64 %10, i64* %8, align 8
  %11 = load i64, i64* %8, align 8
  %12 = call %struct.acpi_acad_softc* @device_get_softc(i64 %11)
  store %struct.acpi_acad_softc* %12, %struct.acpi_acad_softc** %7, align 8
  %13 = load i32, i32* %4, align 4
  switch i32 %13, label %22 [
    i32 128, label %14
  ]

14:                                               ; preds = %3
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @acpi_acad_get_status(i64 %15)
  %17 = load %struct.acpi_acad_softc*, %struct.acpi_acad_softc** %7, align 8
  %18 = getelementptr inbounds %struct.acpi_acad_softc, %struct.acpi_acad_softc* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i64, i64* %5, align 8
  %21 = inttoptr i64 %20 to i32*
  store i32 %19, i32* %21, align 4
  br label %23

22:                                               ; preds = %3
  br label %23

23:                                               ; preds = %22, %14
  ret i32 0
}

declare dso_local %struct.acpi_acad_softc* @device_get_softc(i64) #1

declare dso_local i32 @acpi_acad_get_status(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
